salesforce_sfdx/main/default/objects/User/fields/OSFMX_AccountBussinesName__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AccountBussinesName__c</fullName>
    <formula>Contact.Account.OSFMX_BusinessName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Razón Social Cuenta Negocio</label>
    <type>Text</type>
</CustomField>