salesforce_sfdx/main/default/objects/User/fields/OSFMX_accountowneremail__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_accountowneremail__c</fullName>
    <label>Correo Propietario Cuenta</label>
    <type>Email</type>
</CustomField>