salesforce_sfdx/main/default/objects/User/fields/OSFMX_Accountownerlastname__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Accountownerlastname__c</fullName>
    <label>Apellido Propietario Cuenta</label>
    <type>TextArea</type>
</CustomField>