salesforce_sfdx/main/default/objects/User/fields/OSFMX_AccountOwnername__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AccountOwnername__c</fullName>
    <label>Nombre Propietario Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>