salesforce_sfdx/main/default/objects/User/fields/OSFMX_BeforeTitle__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BeforeTitle__c</fullName>
    <defaultValue>$User.Title</defaultValue>
    <description>Para guardar los cambios del campo estándar.</description>
    <label>Cargo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>