salesforce_sfdx/main/default/objects/User/validationRules/Ingresardireccioncompleta.validationRule-meta.xml
<ValidationRule>
    <fullName>Ingresardireccioncompleta</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	OR(ISBLANK(Street),
	OR(ISBLANK(PostalCode),
	OR(ISBLANK(City),
	OR(ISBLANK(State),
	OR(ISBLANK(Country)))))),Profile.Name=&quot;Perfil de Clientes&quot;)</errorConditionFormula>
    <errorMessage>Debe ingresar la dirección completa.</errorMessage>
</ValidationRule>