salesforce_sfdx/main/default/objects/User/validationRules/Ingresarporlomenosuntelefono.validationRule-meta.xml
<ValidationRule>
    <fullName>Ingresarporlomenosuntelefono</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISBLANK(MobilePhone),
    ISBLANK( Phone ),Profile.Name=&quot;Perfil de Clientes&quot;)</errorConditionFormula>
    <errorMessage>Debe ingresar por lo menos un teléfono.</errorMessage>
</ValidationRule>