salesforce_sfdx/main/default/objects/User/validationRules/Ingresarsolo10digitosTelefonoyMovil.validationRule-meta.xml
<ValidationRule>
    <fullName>Ingresarsolo10digitosTelefonoyMovil</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(AND(NOT(ISBLANK(Phone)),LEN(Phone)!=10),AND(NOT(ISBLANK(MobilePhone)),LEN(MobilePhone)!=10)), Profile.Name=&quot;Perfil de Clientes&quot;)</errorConditionFormula>
    <errorMessage>Para &quot;Teléfono&quot; y &quot;Móvil&quot; debe ingresar sólo 10 dígitos.</errorMessage>
</ValidationRule>