salesforce_sfdx/main/default/objects/User/validationRules/Ingresarsolo5digitosCodigoPostal.validationRule-meta.xml
<ValidationRule>
    <fullName>Ingresarsolo5digitosCodigoPostal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK( PostalCode )),LEN(PostalCode)!=5,Profile.Name=&quot;Perfil de Clientes&quot;)</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Para &quot;Código Postal&quot; debe ingresar sólo 5 dígitos.</errorMessage>
</ValidationRule>