salesforce_sfdx/main/default/objects/User/validationRules/IngresarsolonumerosTelExtMovilCp.validationRule-meta.xml
<ValidationRule>
    <fullName>IngresarsolonumerosTelExtMovilCp</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(AND(NOT(ISBLANK(Phone)),NOT(ISNUMBER(Phone))),
AND(NOT(ISBLANK(Extension)),NOT(ISNUMBER(Extension))),
AND(NOT(ISBLANK(MobilePhone)),NOT(ISNUMBER(MobilePhone))),
AND(NOT(ISBLANK(PostalCode)),NOT(ISNUMBER(PostalCode)))), Profile.Name=&quot;Perfil de Clientes&quot;)</errorConditionFormula>
    <errorMessage>Debe ingresar valores numéricos.</errorMessage>
</ValidationRule>