salesforce_sfdx/main/default/objects/User/validationRules/Modificar_Correo_por_Cliente.validationRule-meta.xml
<ValidationRule>
    <fullName>Modificar_Correo_por_Cliente</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  Profile.Name  = &quot;Perfil de Clientes&quot; ,  ISCHANGED(Email))</errorConditionFormula>
    <errorMessage>No puedes modificar tu correo electrónico, consulta con tu administrador para realizar el cambio.</errorMessage>
</ValidationRule>